changeset/sales event/objects/Daemon__c.object
<CustomObject>
    <fields>
        <fullName>Accomodation_Requested__c</fullName>
        <label>Accomodation Requested</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Before</fullName>
                </value>
                <value>
                    <fullName>After</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Calendar_Event_External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Calendar Event External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Calendar_Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Calendar Event</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Daemon__c.Type__c</field>
                <operation>equals</operation>
                <value>Calendar Event</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Daemon__c</referenceTo>
        <relationshipName>Calendar_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Calendar_Name__c</fullName>
        <label>Calendar Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clicked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clicked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DateId__c</fullName>
        <externalId>true</externalId>
        <label>Global Date</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>DisplayDate__c</fullName>
        <formula>CASE( WEEKDAY(Date__c)
				 ,1,&apos;❼ &apos; +TEXT(DAY(Date__c))+&quot;.&quot;+TEXT(MONTH(Date__c))
					,2,&apos;① &apos;+TEXT(DAY(Date__c))+&quot;.&quot;+TEXT(MONTH(Date__c))
					,3,&apos;② &apos;+TEXT(DAY(Date__c))+&quot;.&quot;+TEXT(MONTH(Date__c))
					,4,&apos;③ &apos;+TEXT(DAY(Date__c))+&quot;.&quot;+TEXT(MONTH(Date__c))
					,5,&apos;④ &apos;+TEXT(DAY(Date__c))+&quot;.&quot;+TEXT(MONTH(Date__c))
					,6,&apos;⑤ &apos;+TEXT(DAY(Date__c))+&quot;.&quot;+TEXT(MONTH(Date__c))
					,7,&apos;❻ &apos;+TEXT(DAY(Date__c))+&quot;.&quot;+TEXT(MONTH(Date__c))
,null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>IF(HOUR(TIMEVALUE(End__c)) = 0,DATEVALUE(End__c)-1,DATEVALUE(End__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <formula>IF(HOUR(TIMEVALUE(End__c)) = 0,null,DATETIMEVALUE(End__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Global_Calendar__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Calendar</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Daemon__c.Type__c</field>
                <operation>equals</operation>
                <value>Global Calendar</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Daemon__c</referenceTo>
        <relationshipName>Global_Calendars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Weekend__c</fullName>
        <formula>IF( TEXT(Type__c) = &quot;Global Calendar&quot; &amp;&amp;  ( WEEKDAY(Date__c) = 1 || WEEKDAY(Date__c) = 7),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Weekend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Of_People_With_Accomodation__c</fullName>
        <label>No. Of People With Accomodation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <label>No.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <label>Note</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_People_Registered__c</fullName>
        <label>Number of People Registered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>One_c__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Progress_Indicator__c</fullName>
        <label>Progress Indicator</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Sales_Event_Origin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Event Origin</label>
        <referenceTo>Sales_Event__c</referenceTo>
        <relationshipLabel>Aspire Calendars</relationshipLabel>
        <relationshipName>Aspire_Calendars</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Selected_Arrival_Date__c</fullName>
        <label>Selected Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Show__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>DATEVALUE(Start__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <formula>IF(HOUR(TIMEVALUE(Start__c)) = 0, null, Start__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateId__c</fullName>
        <label>TemplateId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Global Calendar</fullName>
                </value>
                <value>
                    <fullName>Calendar Event</fullName>
                </value>
                <value>
                    <fullName>Calendar Event Detail</fullName>
                </value>
                <value>
                    <fullName>Sales Event Participant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variant__c</fullName>
        <label>Variant</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Link__c</fullName>
        <label>Web Link</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>CASE(WEEKDAY(Date__c),
	     1, Date__c - 6,
					 2, Date__c,
					 3, Date__c - 1,
						4, Date__c - 2,
						5, Date__c - 3,
						6, Date__c - 4,
					 7, Date__c - 5,
						null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1_Full_Name__c</fullName>
        <label>1. Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2_Full_Name__c</fullName>
        <label>2. Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X3_Full_Name__c</fullName>
        <label>3. Full Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>